--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,5 +42,5 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.github.SumiMakito:AwesomeQRCode-Kotlin:1.0.5'
+    implementation 'com.github.kenglxn.QRGen:android:2.5.0'
 }
