--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  permission:
-    git: git@github.com:EFRenovation/permission.git
+#  permission:
+#    git: git@github.com:EFRenovation/permission.git
 
 dev_dependencies:
   flutter_test:
