--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,7 @@ android {
     }
     defaultConfig {
         minSdkVersion 16
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     lintOptions {
         disable 'InvalidPackage'
@@ -18,5 +18,5 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.github.kenglxn.QRGen:android:2.5.0'
+    implementation 'com.github.SumiMakito:AwesomeQRCode:1.2.0'
 }
