--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,29 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+group 'org.eyrefree.ef_qrcode'
+version '1.0-SNAPSHOT'
 
 buildscript {
+    ext.kotlin_version = '1.3.0'
     repositories {
-        mavenCentral()
+        google()
+        jcenter()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.+'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
+
+rootProject.allprojects {
+    repositories {
+        google()
+        jcenter()
+        maven { url 'https://jitpack.io' }
+    }
+}
+
+apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 28
