feat: update to dart 2.7+

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,9 +1,10 @@
 name: ef_qrcode_example
 description: Demonstrates how to use the ef_qrcode plugin.
 publish_to: 'none'
+version: 0.0.1+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
